--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "npm run dev",
+    "callback": "npm run dev",
+    "promise": "npm run dev",
+    "async": "npm run dev"
   },
   "dependencies": {
     "react": "^19.1.1",
